[gd_scene load_steps=5 format=2]

[ext_resource path="res://Experiments/ElementBending/Sprites/spr_gale.png" type="Texture" id=1]
[ext_resource path="res://Experiments/ElementBending/Objects/Gale/Gale.gd" type="Script" id=2]
[ext_resource path="res://Experiments/ElementBending/Sprites/spr_gale_arrow.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="Gale" type="Node2D"]
script = ExtResource( 2 )

[node name="AreaOfEffect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="HitboxCollision" type="CollisionShape2D" parent="AreaOfEffect"]
shape = SubResource( 1 )

[node name="GaleSprite" type="Sprite" parent="AreaOfEffect"]
visible = false
texture = ExtResource( 1 )

[node name="ArrowSprite" type="Sprite" parent="AreaOfEffect"]
self_modulate = Color( 1, 1, 1, 0.498039 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="AreaOfEffect" to="." method="_on_AreaOfEffect_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
